Fix docker dev setup
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2696>

--- a/dev.yml
+++ b/dev.yml
@@ -123,9 +123,9 @@ services:
       - "${NGINX_PORTS_MAPPING-8000:80}"
     environment:
       - "NGINX_MAX_BODY_SIZE=${NGINX_MAX_BODY_SIZE-100M}"
-      - "FUNKWHALE_API_IP=${FUNKHALE_API_IP-api}"
+      - "FUNKWHALE_API_HOST=${FUNKWHALE_API_HOST-api}"
       - "FUNKWHALE_API_PORT=${FUNKWHALE_API_PORT-5000}"
-      - "FUNKWHALE_FRONT_IP=${FUNKHALE_FRONT_IP-front}"
+      - "FUNKWHALE_FRONT_IP=${FUNKWHALE_FRONT_IP-front}"
       - "FUNKWHALE_FRONT_PORT=${VUE_PORT-8080}"
       - "COMPOSE_PROJECT_NAME=${COMPOSE_PROJECT_NAME- }"
       - "FUNKWHALE_HOSTNAME=${FUNKWHALE_HOSTNAME-localhost}"
