ci: Remove creation of release, only publish packages
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2698>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -510,7 +510,7 @@ docker:
     paths:
       - metadata.json
 
-release:
+package:
   stage: publish
   needs:
     - job: build_metadata
@@ -519,6 +519,8 @@ release:
       artifacts: true
     - job: build_front
       artifacts: true
+  rules:
+    - if: $CI_COMMIT_BRANCH =~ /(stable|develop)/
 
   image: $CI_REGISTRY/funkwhale/ci/python:3.11
   variables:
@@ -526,11 +528,6 @@ release:
   before_script:
     - apt-get update
     - apt-get install -y zip
-    - >
-      curl "https://gitlab.com/api/v4/projects/gitlab-org%2Frelease-cli/packages/generic/release-cli/latest/release-cli-linux-amd64"
-      --output /usr/local/bin/release-cli
-    - chmod +x /usr/local/bin/release-cli
-    - release-cli -v
   script:
-    - make build
-    - scripts/ci-release.sh
+    - make package
+    - scripts/ci-upload-packages.sh
