Fix Apache configuration
Built assets are fetched using path like this: `/assets/foo-a1b2c3.js`. Apache failed to serve those, as it was missing disabling the proxy pass for the static assets folder. This commit adds the necessary configuration for properly serving the static assets.

Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2699>

--- a/deploy/apache.conf
+++ b/deploy/apache.conf
@@ -94,6 +94,11 @@ Define MEDIA_DIRECTORY_PATH ${FUNKWHALE_ROOT_PATH}/data/media
    </Location>
    Alias /front ${FUNKWHALE_ROOT_PATH}/front/dist
 
+   <Location "/assets">
+      ProxyPass  "!"
+   </Location>
+   Alias /assets ${FUNKWHALE_ROOT_PATH}/front/dist/assets
+
    <Location "/media">
       ProxyPass  "!"
    </Location>
