--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "@funkwhale/ui": "0.2.2",
     "@sentry/tracing": "7.47.0",
     "@sentry/vue": "7.47.0",
+    "@tauri-apps/api": "1.5.3",
     "@vue/runtime-core": "3.3.11",
     "@vueuse/core": "10.3.0",
     "@vueuse/integrations": "10.3.0",
@@ -61,6 +62,7 @@
     "@faker-js/faker": "8.4.1",
     "@intlify/eslint-plugin-vue-i18n": "2.0.0",
     "@intlify/unplugin-vue-i18n": "2.0.0",
+    "@tauri-apps/cli": "2.0.0-alpha.21",
     "@types/diff": "5.0.9",
     "@types/dompurify": "3.0.5",
     "@types/jquery": "3.5.29",
