--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -74,18 +74,19 @@ boto3 = "==1.26.161"
 click = "==8.1.7"
 cryptography = "==38.0.4"
 feedparser = "==6.0.10"
+liblistenbrainz = "==0.5.5"
 musicbrainzngs = "==0.7.1"
 mutagen = "==1.46.0"
 pillow = "10.1.0"
 pydub = "==0.25.1"
 pyld = "==2.0.3"
 python-magic = "==0.4.27"
-requests = "==2.28.2"
+requests = "==2.31.0"
 requests-http-message-signatures = "==0.3.1"
 sentry-sdk = "==1.19.1"
 watchdog = "==2.2.1"
-troi = { git = "https://github.com/metabrainz/troi-recommendation-playground.git", tag = "v-2023-10-30.0"}
-lb-matching-tools = { git = "https://github.com/metabrainz/listenbrainz-matching-tools.git", branch = "main"}
+troi = "==2024.1.26.0"
+lb-matching-tools = "==2024.1.25.0rc1"
 unidecode = "==1.3.7"
 pycountry = "22.3.5"
 
