ci: Install dependencies before building tauri
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2701>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -439,6 +439,8 @@ build_desktop:
   image: $CI_REGISTRY/funkwhale/ci/node-tauri:18
   variables:
     <<: *keep_git_files_permissions
+  before_script:
+    - yarn install
   script:
     - yarn tauri build
   artifacts:
