chore(docs) Update all dependencies
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2750>

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,7 +14,7 @@ $(VENV):
 	$(MAKE) install
 
 install:
-	poetry install
+	poetry install --no-root
 	poetry run pip install --no-deps --editable ../api
 
 clean:
