--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -6,21 +6,19 @@ authors = ["Funkwhale Collective <contact@funkwhale.audio>"]
 license = "AGPLv3"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 
-sphinx = "==5.3.0"
-sphinx_design = "==0.3.0"
+sphinx = "7.2.6"
+sphinx_design = "0.5.0"
 sphinx-copybutton = "==0.5.2"
-sphinx-intl = "2.0.1"
+sphinx-intl = "2.1.0"
 sphinx-rtd-theme = "==2.0.0"
-sphinxcontrib-mermaid = "0.7.1"
-myst-parser = "1.0.0"
+sphinxcontrib-mermaid = "0.9.2"
+myst-parser = "2.0.0"
 
-django = "==3.2.23"
-django-environ = "==0.10.0"
 
 [tool.poetry.group.dev.dependencies]
-sphinx-autobuild = "2021.3.14"
+sphinx-autobuild = "2024.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
