--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -15,6 +15,8 @@ sphinx-intl = "2.1.0"
 sphinx-rtd-theme = "==2.0.0"
 sphinxcontrib-mermaid = "0.9.2"
 myst-parser = "2.0.0"
+django-environ = "==0.11.2"
+django = "==3.2.23"
 
 
 [tool.poetry.group.dev.dependencies]
