--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "@sentry/tracing": "7.47.0",
     "@sentry/vue": "7.47.0",
     "@tauri-apps/api": "2.0.0-beta.0",
+    "@vitest/coverage-v8": "1.2.2",
     "@vue/runtime-core": "3.3.11",
     "@vueuse/core": "10.3.0",
     "@vueuse/integrations": "10.3.0",
