chore: Add frontend artifacts to gitignore
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2701>

--- a/.gitignore
+++ b/.gitignore
@@ -85,8 +85,12 @@ front/yarn-debug.log*
 front/yarn-error.log*
 front/tests/unit/coverage
 front/tests/e2e/reports
+front/test_results.xml
+front/coverage/
 front/selenium-debug.log
 docs/_build
+#Tauri
+front/tauri/gen
 
 /data/
 .env
