--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "serve": "vite preview",
     "test": "vitest run",
     "test:unit": "vitest run --coverage",
+    "test:generate-mock-server": "msw-auto-mock ../docs/schema.yml -o test/msw-server.ts --node",
     "lint": "eslint --cache --cache-strategy content --ext .ts,.js,.vue,.json,.html src test cypress public/embed.html",
     "lint:tsc": "vue-tsc --noEmit --incremental && tsc --noEmit --incremental -p cypress",
     "fix-fomantic-css": "scripts/fix-fomantic-css.sh",
@@ -57,6 +58,7 @@
     "vuex-router-sync": "5.0.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "8.4.1",
     "@intlify/eslint-plugin-vue-i18n": "2.0.0",
     "@intlify/unplugin-vue-i18n": "2.0.0",
     "@types/diff": "5.0.9",
@@ -89,6 +91,8 @@
     "eslint-plugin-vue": "9.8.0",
     "jsdom": "24.0.0",
     "jsonc-eslint-parser": "2.1.0",
+    "msw": "2.2.1",
+    "msw-auto-mock": "0.18.0",
     "rollup-plugin-visualizer": "5.9.0",
     "sass": "1.57.1",
     "sinon": "15.0.2",
@@ -98,7 +102,7 @@
     "utility-types": "3.10.0",
     "vite": "4.3.5",
     "vite-plugin-pwa": "0.14.4",
-    "vitest": "0.25.8",
+    "vitest": "1.3.0",
     "vue-tsc": "1.6.5",
     "workbox-core": "6.5.4",
     "workbox-precaching": "6.5.4",
