--- a/front/package.json
+++ b/front/package.json
@@ -72,7 +72,7 @@
     "@types/vue-virtual-scroller": "npm:@earltp/vue-virtual-scroller",
     "@typescript-eslint/eslint-plugin": "6.20.0",
     "@vitejs/plugin-vue": "5.0.3",
-    "@vitest/coverage-c8": "0.25.8",
+    "@vitest/coverage-v8": "1.3.1",
     "@vue-macros/volar": "0.13.3",
     "@vue/compiler-sfc": "3.3.11",
     "@vue/eslint-config-standard": "8.0.1",
@@ -100,9 +100,9 @@
     "typescript": "4.9.5",
     "unplugin-vue-macros": "2.4.6",
     "utility-types": "3.10.0",
-    "vite": "4.3.5",
+    "vite": "5.1.3",
     "vite-plugin-pwa": "0.14.4",
-    "vitest": "1.3.0",
+    "vitest": "1.3.1",
     "vue-tsc": "1.6.5",
     "workbox-core": "6.5.4",
     "workbox-precaching": "6.5.4",
