ci: Report frontend test coverage to gitlab
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2757>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -287,6 +287,7 @@ test_front:
       coverage_report:
         coverage_format: cobertura
         path: front/coverage/cobertura-coverage.xml
+  coverage: '/All files\s+\|\s+\d+\.\d+\s+\|\s+\d+\.\d+\s+\|\s+\d+\.\d+\s+\|\s+(\d+\.\d+)\s+.*/'
 
 build_metadata:
   stage: build
