feat(tauri): add metadata to Cargo.toml
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2701>

--- a/front/tauri/Cargo.toml
+++ b/front/tauri/Cargo.toml
@@ -2,9 +2,9 @@
 name = "funkwhale"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+authors = ["Funkwhale Collective"]
+license = "AGPLv3"
+repository = "https://dev.funkwhale.audio/funkwhale/funkwhale/"
 default-run = "funkwhale"
 edition = "2021"
 rust-version = "1.60"
