--- a/front/package.json
+++ b/front/package.json
@@ -22,7 +22,6 @@
     "@sentry/tracing": "7.47.0",
     "@sentry/vue": "7.47.0",
     "@tauri-apps/api": "2.0.0-beta.1",
-    "@vitest/coverage-v8": "1.2.2",
     "@vue/runtime-core": "3.3.11",
     "@vueuse/core": "10.3.0",
     "@vueuse/integrations": "10.3.0",
@@ -46,6 +45,7 @@
     "text-clipper": "2.2.0",
     "transliteration": "2.3.5",
     "universal-cookie": "4.0.4",
+    "vite-plugin-pwa": "0.14.4",
     "vue": "3.3.11",
     "vue-gettext": "2.1.12",
     "vue-i18n": "9.9.1",
