--- a/front/package.json
+++ b/front/package.json
@@ -47,17 +47,14 @@
     "universal-cookie": "4.0.4",
     "vite-plugin-pwa": "0.14.4",
     "vue": "3.3.11",
-    "vue-gettext": "2.1.12",
     "vue-i18n": "9.9.1",
     "vue-router": "4.2.5",
     "vue-upload-component": "3.1.8",
     "vue-virtual-scroller": "2.0.0-beta.8",
-    "vue3-gettext": "2.3.4",
     "vue3-lazyload": "0.3.8",
     "vuedraggable": "4.1.0",
     "vuex": "4.1.0",
-    "vuex-persistedstate": "4.1.0",
-    "vuex-router-sync": "5.0.0"
+    "vuex-persistedstate": "4.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "8.4.1",
@@ -95,10 +92,8 @@
     "jsonc-eslint-parser": "2.4.0",
     "msw": "2.2.1",
     "msw-auto-mock": "0.18.0",
-    "patch-package": "8.0.0",
     "rollup-plugin-visualizer": "5.9.0",
     "sass": "1.57.1",
-    "sinon": "15.0.2",
     "standardized-audio-context-mock": "9.6.32",
     "typescript": "5.3.3",
     "unplugin-vue-macros": "2.4.6",
