--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
     rev: v4.4.0
     hooks:
       - id: check-added-large-files
+        exclude: ^(front/patches/)
       - id: check-case-conflict
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
@@ -20,9 +21,11 @@ repos:
       - id: check-vcs-permalinks
       - id: check-merge-conflict
       - id: end-of-file-fixer
-        exclude: ^(docs/locales/.*/LC_MESSAGES)
+        exclude: ^(docs/locales/.*/LC_MESSAGES|front/patches/)
       - id: mixed-line-ending
+        exclude: ^(front/patches/)
       - id: trailing-whitespace
+        exclude: ^(front/patches/)
 
   - repo: https://github.com/python-poetry/poetry
     rev: 1.5.1
@@ -68,6 +71,7 @@ repos:
     hooks:
       - id: codespell
         additional_dependencies: [tomli]
+        exclude: ^(front/patches/)
 
   - repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.9.0.5
