--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -9,7 +9,6 @@
     "types": [
       "vitest/globals",
       "vite/client",
-      "vue/ref-macros",
       "vite-plugin-pwa/client",
       "unplugin-vue-macros/macros-global"
     ],
@@ -29,7 +28,8 @@
       "@vue-macros/volar/short-vmodel",
       "@vue-macros/volar/define-slots",
       "@vue-macros/volar/export-props",
-      "@vue-macros/volar/jsx-directive"
+      "@vue-macros/volar/jsx-directive",
+      "@vue-macros/volar/setup-jsdoc"
     ]
   }
 }
